--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -115,18 +115,33 @@
   margin: 0;
   padding: 0;
 }
-.openerp .oe_semantic_html_override_ul li {
+.openerp .oe_semantic_html_override_ul ul, .openerp .oe_semantic_html_override_ul ol, .openerp .oe_semantic_html_override_ul li {
   margin: 0;
   padding: 0;
+}
+.openerp .oe_semantic_html_override_ul li {
   list-style-type: none;
 }
 .openerp .oe_semantic_html_override ul, .openerp .oe_semantic_html_override ol {
   margin: 0;
   padding: 0;
 }
-.openerp .oe_semantic_html_override ul li, .openerp .oe_semantic_html_override ol li {
+.openerp .oe_semantic_html_override ul ul, .openerp .oe_semantic_html_override ul ol, .openerp .oe_semantic_html_override ul li, .openerp .oe_semantic_html_override ol ul, .openerp .oe_semantic_html_override ol ol, .openerp .oe_semantic_html_override ol li {
   margin: 0;
   padding: 0;
+}
+.openerp .oe_semantic_html_override ul li, .openerp .oe_semantic_html_override ol li {
+  list-style-type: none;
+}
+.openerp ul.oe_semantic_html_override {
+  margin: 0;
+  padding: 0;
+}
+.openerp ul.oe_semantic_html_override ul, .openerp ul.oe_semantic_html_override ol, .openerp ul.oe_semantic_html_override li {
+  margin: 0;
+  padding: 0;
+}
+.openerp ul.oe_semantic_html_override li {
   list-style-type: none;
 }
 .openerp a.button:link, .openerp a.button:visited, .openerp button, .openerp input[type='submit'], .openerp .ui-dialog-buttonpane .ui-dialog-buttonset .ui-button {
@@ -603,18 +618,22 @@
   margin: 0;
   padding: 0;
 }
-.openerp .oe_notebook li {
+.openerp .oe_notebook ul, .openerp .oe_notebook ol, .openerp .oe_notebook li {
   margin: 0;
   padding: 0;
+}
+.openerp .oe_notebook li {
   list-style-type: none;
 }
 .openerp .oe_notebook ul, .openerp .oe_notebook ol {
   margin: 0;
   padding: 0;
 }
-.openerp .oe_notebook ul li, .openerp .oe_notebook ol li {
+.openerp .oe_notebook ul ul, .openerp .oe_notebook ul ol, .openerp .oe_notebook ul li, .openerp .oe_notebook ol ul, .openerp .oe_notebook ol ol, .openerp .oe_notebook ol li {
   margin: 0;
   padding: 0;
+}
+.openerp .oe_notebook ul li, .openerp .oe_notebook ol li {
   list-style-type: none;
 }
 .openerp .oe_notebook.ui-corner-all {
@@ -924,9 +943,11 @@
   margin: 0;
   padding: 0;
 }
-.openerp .oe_login .oe_login_pane ul li, .openerp .oe_login .oe_login_pane ol li {
+.openerp .oe_login .oe_login_pane ul ul, .openerp .oe_login .oe_login_pane ul ol, .openerp .oe_login .oe_login_pane ul li, .openerp .oe_login .oe_login_pane ol ul, .openerp .oe_login .oe_login_pane ol ol, .openerp .oe_login .oe_login_pane ol li {
   margin: 0;
   padding: 0;
+}
+.openerp .oe_login .oe_login_pane ul li, .openerp .oe_login .oe_login_pane ol li {
   list-style-type: none;
 }
 .openerp .oe_login .oe_login_pane h2 {
@@ -1012,9 +1033,11 @@
   margin: 0;
   padding: 0;
 }
-.openerp .oe_topbar ul li, .openerp .oe_topbar ol li {
+.openerp .oe_topbar ul ul, .openerp .oe_topbar ul ol, .openerp .oe_topbar ul li, .openerp .oe_topbar ol ul, .openerp .oe_topbar ol ol, .openerp .oe_topbar ol li {
   margin: 0;
   padding: 0;
+}
+.openerp .oe_topbar ul li, .openerp .oe_topbar ol li {
   list-style-type: none;
 }
 .openerp .oe_topbar .oe_topbar_item {
@@ -1093,9 +1116,11 @@
   margin: 0;
   padding: 0;
 }
-.openerp .oe_leftbar ul li, .openerp .oe_leftbar ol li {
+.openerp .oe_leftbar ul ul, .openerp .oe_leftbar ul ol, .openerp .oe_leftbar ul li, .openerp .oe_leftbar ol ul, .openerp .oe_leftbar ol ol, .openerp .oe_leftbar ol li {
   margin: 0;
   padding: 0;
+}
+.openerp .oe_leftbar ul li, .openerp .oe_leftbar ol li {
   list-style-type: none;
 }
 .openerp a.oe_logo {
@@ -1304,9 +1329,11 @@
   margin: 0;
   padding: 0;
 }
-.openerp .oe_view_manager table.oe_view_manager_header ul li, .openerp .oe_view_manager table.oe_view_manager_header ol li {
+.openerp .oe_view_manager table.oe_view_manager_header ul ul, .openerp .oe_view_manager table.oe_view_manager_header ul ol, .openerp .oe_view_manager table.oe_view_manager_header ul li, .openerp .oe_view_manager table.oe_view_manager_header ol ul, .openerp .oe_view_manager table.oe_view_manager_header ol ol, .openerp .oe_view_manager table.oe_view_manager_header ol li {
   margin: 0;
   padding: 0;
+}
+.openerp .oe_view_manager table.oe_view_manager_header ul li, .openerp .oe_view_manager table.oe_view_manager_header ol li {
   list-style-type: none;
 }
 .openerp .oe_view_manager table.oe_view_manager_header .oe_header_row {
@@ -2447,14 +2474,18 @@
   margin: 0;
   padding: 0;
 }
-.openerp .oe_form_field_status ul li, .openerp .oe_form_field_status ol li {
+.openerp .oe_form_field_status ul ul, .openerp .oe_form_field_status ul ol, .openerp .oe_form_field_status ul li, .openerp .oe_form_field_status ol ul, .openerp .oe_form_field_status ol ol, .openerp .oe_form_field_status ol li {
   margin: 0;
   padding: 0;
+}
+.openerp .oe_form_field_status ul li, .openerp .oe_form_field_status ol li {
   list-style-type: none;
 }
-.openerp .oe_form_field_status li {
+.openerp .oe_form_field_status ul, .openerp .oe_form_field_status ol, .openerp .oe_form_field_status li {
   margin: 0;
   padding: 0;
+}
+.openerp .oe_form_field_status li {
   list-style-type: none;
 }
 .openerp .oe_form .oe_form_field_one2many > .oe_view_manager .oe_list_pager_single_page {
