Solved problem with left menu
bzr revid: nicolas.vanhoren@openerp.com-20120905081019-o4x9d6v2meiwlfl7

--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -1215,16 +1215,16 @@
   width: 100%;
   display: inline-block;
 }
-.openerp .oe_secondary_submenu > li {
+.openerp .oe_secondary_submenu li {
   position: relative;
-  padding: 1px 0 1px 20px;
+  padding: 1px 0 1px 20px !important;
 }
-.openerp .oe_secondary_submenu > li a {
+.openerp .oe_secondary_submenu li a {
   display: block;
   color: #4c4c4c;
   padding: 2px 4px 2px 0;
 }
-.openerp .oe_secondary_submenu > li .oe_menu_label {
+.openerp .oe_secondary_submenu li .oe_menu_label {
   position: absolute;
   top: 1px;
   right: 1px;
