--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -927,9 +927,9 @@ $sheet-max-width: 860px
         margin: 0
         width: 100%
         display: inline-block
-        > li
+        li
             position: relative
-            padding: 1px 0 1px 20px
+            padding: 1px 0 1px 20px !important
             a
                 display: block
                 color: #4c4c4c
