--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -200,8 +200,6 @@ $sheet-max-width: 860px
         vertical-align: middle
     h4
         margin: 4px 0
-    .oe_semantic_html_override_ul
-        @include ul-html-override
     .oe_semantic_html_override
         @include semantic-html-override
     ul.oe_semantic_html_override
@@ -1014,7 +1012,14 @@ $sheet-max-width: 860px
         table.oe_view_manager_header
             width: 100%
             table-layout: fixed
-            @include semantic-html-override
+            ul
+                padding: 0
+                margin-right: 0
+                margin-top: 0
+                margin-bottom: 0
+                li
+                    list-style-type: none
+                    margin: 0
             .oe_header_row
                 //min-height: 26px
                 //line-height: 26px
@@ -1099,11 +1104,13 @@ $sheet-max-width: 860px
         // }}}
         // ViewManager.switches {{{
         .oe_view_manager_switch
+            margin-left: 8px
             li
                 text-align: center
                 width: 24px
                 height: 24px
                 line-height: 16px
+                padding: 0
                 a
                     position: relative
             .oe_vm_switch_list:after, .oe_vm_switch_tree:after
