--- a/openerp/addons/base/module/wizard/base_module_import_view.xml
+++ b/openerp/addons/base/module/wizard/base_module_import_view.xml
@@ -41,7 +41,7 @@
             name="Import Module"
             action="action_view_base_module_import"
             id="menu_view_base_module_import"
-            parent="menu_management"
+            parent="menu_module_tree"
             groups="base.group_no_one"
             sequence="1"/>
     -->
