--- a/openerp/addons/base/module/wizard/base_module_update_view.xml
+++ b/openerp/addons/base/module/wizard/base_module_update_view.xml
@@ -44,7 +44,7 @@
             action="action_view_base_module_update"
             id="menu_view_base_module_update"
             groups="base.group_no_one"
-            parent="menu_management"
+            parent="menu_module_tree"
             sequence="2"
             icon="STOCK_CONVERT"/>
 
