--- a/openerp/addons/base/module/wizard/base_module_upgrade_view.xml
+++ b/openerp/addons/base/module/wizard/base_module_upgrade_view.xml
@@ -34,7 +34,7 @@
            action="action_view_base_module_upgrade"
            groups="base.group_no_one"
            id="menu_view_base_module_upgrade"
-           parent="menu_management"
+           parent="menu_module_tree"
            sequence="3"/>
 
        <record id="view_base_module_upgrade_install" model="ir.ui.view">
