--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@charset "utf-8";
 @font-face {
   font-family: "mnmliconsRegular";
   src: url("/web/static/src/font/mnmliconsv21-webfont.eot") format("eot");
@@ -1007,7 +1007,6 @@
 .openerp .oe_topbar {
   width: 100%;
   height: 31px;
-  border-top: solid 1px #d3d3d3;
   background-color: #646060;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#646060), to(#262626));
   background-image: -webkit-linear-gradient(top, #646060, #262626);
@@ -1238,10 +1237,11 @@
 }
 .openerp .oe_secondary_submenu .oe_menu_counter:hover {
   cursor: pointer;
-  -moz-transform: scale(1.1);
   -webkit-transform: scale(1.1);
-  -o-transform: scale(1.1);
+  -moz-transform: scale(1.1);
   -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
 }
 .openerp .oe_secondary_submenu .oe_active {
   border-top: 1px solid lightGray;
