--- a/addons/web_kanban/static/src/css/kanban.css
+++ b/addons/web_kanban/static/src/css/kanban.css
@@ -140,9 +140,6 @@
 .openerp .oe_kanban_view .oe_kanban_add {
   float: right;
 }
-.openerp .oe_kanban_view .oe_kanban_quick_create {
-  margin-bottom: 4px;
-}
 .openerp .oe_kanban_view .oe_kanban_quick_create_buttons {
   margin: 4px 0;
 }
@@ -151,10 +148,14 @@
   padding: 10px;
 }
 .openerp .oe_kanban_view .oe_kanban_quick_create input {
+  outline: none;
+  border: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  -box-shadow: none;
   display: block;
   margin: 0 0 8px 0;
   font-size: 13px;
-  box-sizing: border-box;
   width: 100%;
 }
 .openerp .oe_kanban_view .oe_kanban_vignette {
@@ -334,7 +335,8 @@
   display: inline-block;
   line-height: 1em;
 }
-.openerp .oe_kanban_view .oe_kanban_card {
+.openerp .oe_kanban_view .oe_kanban_card, .openerp .oe_kanban_view .oe_kanban_quick_create {
+  margin-bottom: 4px;
   position: relative;
   display: block;
   background: white;
@@ -346,27 +348,27 @@
   -webkit-border-radius: 4px;
   border-radius: 4px;
 }
-.openerp .oe_kanban_view .oe_kanban_card:hover {
+.openerp .oe_kanban_view .oe_kanban_card:hover, .openerp .oe_kanban_view .oe_kanban_quick_create:hover {
   border: 1px solid #7c7bad;
   -moz-box-shadow: 0 0 4px #7c7bad;
   -webkit-box-shadow: 0 0 4px #7c7bad;
   -box-shadow: 0 0 4px #7c7bad;
 }
-.openerp .oe_kanban_view .oe_kanban_card:hover .oe_dropdown_kanban > span {
+.openerp .oe_kanban_view .oe_kanban_card:hover .oe_dropdown_kanban > span, .openerp .oe_kanban_view .oe_kanban_quick_create:hover .oe_dropdown_kanban > span {
   visibility: visible;
 }
-.openerp .oe_kanban_view .oe_kanban_card h3 {
+.openerp .oe_kanban_view .oe_kanban_card h3, .openerp .oe_kanban_view .oe_kanban_quick_create h3 {
   margin: 0 16px 0 0;
   color: #4c4c4c;
   text-decoration: none;
 }
-.openerp .oe_kanban_view .oe_kanban_card h3:hover {
+.openerp .oe_kanban_view .oe_kanban_card h3:hover, .openerp .oe_kanban_view .oe_kanban_quick_create h3:hover {
   text-decoration: none;
 }
-.openerp .oe_kanban_view .oe_kanban_card .oe_dropdown_kanban {
+.openerp .oe_kanban_view .oe_kanban_card .oe_dropdown_kanban, .openerp .oe_kanban_view .oe_kanban_quick_create .oe_dropdown_kanban {
   margin-top: 4px;
 }
-.openerp .oe_kanban_view .oe_kanban_card .oe_dropdown_kanban .oe_kanban_project_times li {
+.openerp .oe_kanban_view .oe_kanban_card .oe_dropdown_kanban .oe_kanban_project_times li, .openerp .oe_kanban_view .oe_kanban_quick_create .oe_dropdown_kanban .oe_kanban_project_times li {
   float: left;
 }
 .openerp .oe_kanban_view .oe_kanban_star {
