[FIX] viewmanager css for inline view
bzr revid: al@openerp.com-20120908231208-9s1bk5ked84vn018

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -1155,7 +1155,7 @@ $sheet-max-width: 860px
                     padding-top: 8px
     // }}}
     // ViewManager inline {{{
-    .oe_view_manager_inline
+    .oe_view_manager_inline, .oe_view_manager_inlineview
         height: 100%
         > .oe_view_manager_header
             display: none
