--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -1503,10 +1503,10 @@
 .openerp .oe_view_manager_current > .oe_view_manager_header .oe_header_row:first-child td {
   padding-top: 8px;
 }
-.openerp .oe_view_manager_inline {
+.openerp .oe_view_manager_inline, .openerp .oe_view_manager_inlineview {
   height: 100%;
 }
-.openerp .oe_view_manager_inline > .oe_view_manager_header {
+.openerp .oe_view_manager_inline > .oe_view_manager_header, .openerp .oe_view_manager_inlineview > .oe_view_manager_header {
   display: none;
 }
 .openerp .oe_popup_form > .oe_formview > .oe_form_pager {
