[IMP] Improved kanban dropdown styling
bzr revid: fme@openerp.com-20120910115620-o05fm0nw743ax1vt

--- a/addons/web_kanban/static/src/css/kanban.css
+++ b/addons/web_kanban/static/src/css/kanban.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 .openerp .oe_kanban_view {
   background: white;
   height: inherit;
@@ -472,6 +473,10 @@
   left: 0;
   top: 28px;
   min-width: 160px;
+  padding: 2px;
+}
+.openerp .oe_kanban_view .oe_dropdown_kanban .oe_dropdown_menu li {
+  padding: 3px;
 }
 .openerp .oe_kanban_view .oe_dropdown_kanban.oe_opened > span {
   visibility: visible;
