--- a/addons/web_kanban/static/src/css/kanban.sass
+++ b/addons/web_kanban/static/src/css/kanban.sass
@@ -397,6 +397,9 @@
             left: 0
             top: 28px
             min-width: 160px
+            padding: 2px
+            li
+                padding: 3px
     .oe_dropdown_kanban
         &.oe_opened > span
             visibility: visible
