[IMP] Improve the previous improvement
bzr revid: fme@openerp.com-20120910115712-hdfs29wi8use3659

--- a/addons/web_kanban/static/src/css/kanban.css
+++ b/addons/web_kanban/static/src/css/kanban.css
@@ -475,7 +475,7 @@
   min-width: 160px;
   padding: 2px;
 }
-.openerp .oe_kanban_view .oe_dropdown_kanban .oe_dropdown_menu li {
+.openerp .oe_kanban_view .oe_dropdown_kanban .oe_dropdown_menu > li {
   padding: 3px;
 }
 .openerp .oe_kanban_view .oe_dropdown_kanban.oe_opened > span {
