--- a/addons/web_kanban/static/src/css/kanban.sass
+++ b/addons/web_kanban/static/src/css/kanban.sass
@@ -398,7 +398,7 @@
             top: 28px
             min-width: 160px
             padding: 2px
-            li
+            > li
                 padding: 3px
     .oe_dropdown_kanban
         &.oe_opened > span
