--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -2574,10 +2574,13 @@
 .openerp .oe_form .oe_form_field_many2many > .oe_list .oe_list_pager_single_page {
   display: none;
 }
+.openerp .oe_list_buttons .oe_alternative {
+  visibility: hidden;
+}
 .openerp .oe_list_buttons .oe_list_save, .openerp .oe_list_buttons .oe_list_discard {
   display: none;
 }
-.openerp .oe_list_buttons.oe_editing .oe_list_add, .openerp .oe_list_buttons.oe_editing .oe_list_button_import {
+.openerp .oe_list_buttons.oe_editing .oe_list_add {
   display: none;
 }
 .openerp .oe_list_buttons.oe_editing .oe_list_save {
@@ -2585,6 +2588,9 @@
 }
 .openerp .oe_list_buttons.oe_editing .oe_list_discard {
   display: inline;
+}
+.openerp .oe_list_buttons.oe_editing .oe_alternative {
+  visibility: visible;
 }
 .openerp .oe_list {
   position: relative;
