--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -1971,15 +1971,19 @@ $sheet-max-width: 860px
     // }}}
     // ListView {{{
     .oe_list_buttons
+        .oe_alternative
+            visibility: hidden
         .oe_list_save, .oe_list_discard
             display: none
         &.oe_editing
-            .oe_list_add, .oe_list_button_import
+            .oe_list_add
                 display: none
             .oe_list_save
                 display: inline-block
             .oe_list_discard
                 display: inline
+            .oe_alternative
+                visibility: visible
 
     .oe_list
         position: relative
