[IMP] Crop breadcrumb items
bzr revid: fme@openerp.com-20120912125445-kuk7knes2a9ogzd5

--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -1239,6 +1239,13 @@
 .openerp .oe_application > div {
   height: 100%;
 }
+.openerp .oe_application .oe_breadcrumb_item {
+  display: inline-block;
+  max-width: 7em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .openerp .oe_view_manager .oe_view_manager_body {
   height: inherit;
 }
