--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -987,6 +987,12 @@ $sheet-max-width: 860px
                 text-decoration: underline
         > div
             height: 100%
+        .oe_breadcrumb_item
+            display: inline-block
+            max-width: 7em
+            white-space: nowrap
+            overflow: hidden
+            text-overflow: ellipsis
     // }}}
     // ViewManager common {{{
     .oe_view_manager
