[IMP] Do not overflow ellipsis on last breadcrumb item
bzr revid: fme@openerp.com-20120912132215-qftamqpgekx0f3w9

--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -1239,7 +1239,7 @@
 .openerp .oe_application > div {
   height: 100%;
 }
-.openerp .oe_application .oe_breadcrumb_item {
+.openerp .oe_application .oe_breadcrumb_item:not(:last-child) {
   display: inline-block;
   max-width: 7em;
   white-space: nowrap;
