--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -987,7 +987,7 @@ $sheet-max-width: 860px
                 text-decoration: underline
         > div
             height: 100%
-        .oe_breadcrumb_item
+        .oe_breadcrumb_item:not(:last-child)
             display: inline-block
             max-width: 7em
             white-space: nowrap
