[IMP] kanban css
bzr revid: fp@tinyerp.com-20120912153852-3a3rgkow3t1c5yv2

--- a/addons/web_kanban/static/src/css/kanban.sass
+++ b/addons/web_kanban/static/src/css/kanban.sass
@@ -92,7 +92,6 @@
     .oe_kanban_group_title
         font-size: 16px
         font-weight: bold
-        min-height: 32px
         color: #333333
         text-shadow: 0 1px 0 white
         > span
@@ -121,6 +120,7 @@
         height: 100%
     .oe_kanban_aggregates
         padding: 0
+        margin: 0px
     .oe_kanban_group_folded
         .oe_kanban_group_title, &.oe_kanban_column > *, .oe_kanban_aggregates, .oe_kanban_add
             display: none
