[FIX] css login and kanban
bzr revid: al@openerp.com-20120912153901-faxihm41n34hn294

--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -792,9 +792,10 @@
   font-size: 14px;
   height: 100%;
 }
-.openerp .oe_login li {
+.openerp .oe_login ul, .openerp .oe_login li {
+  margin: 0;
   list-style-type: none;
-  padding-bottom: 4px;
+  padding: 0 0 4px 0;
 }
 .openerp .oe_login button {
   float: right;
