--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -654,9 +654,10 @@ $sheet-max-width: 860px
         text-align: center
         font-size: 14px
         height: 100%
-        li
+        ul, li
+            margin: 0
             list-style-type: none
-            padding-bottom: 4px
+            padding: 0 0 4px 0
         button
             float: right
             display: inline-block
