--- a/addons/web_kanban/static/src/css/kanban.sass
+++ b/addons/web_kanban/static/src/css/kanban.sass
@@ -100,6 +100,10 @@
     .oe_kanban_column, .oe_kanban_group_header
         vertical-align: top
         padding: 6px 6px 6px 5px
+        ul, li
+            margin: 0
+            padding: 0
+            list-style-type: none
     .oe_kanban_group_header.oe_kanban_no_group
         padding: 0px
 
