[IMP] clean CSS and multiiline M2O
bzr revid: fp@tinyerp.com-20120912171624-wx9pfhi9qb3vmxs6

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -266,7 +266,7 @@ $sheet-max-width: 860px
             margin: 0
             @include radius(0 0 2px 2px)
             button
-                margin: 0
+                margin: 0 4px 0 0
             .ui-dialog-buttonset
                 float: left
                 .ui-button
