[IMP] remove web mobile
bzr revid: fp@tinyerp.com-20120912180258-gvmg8987f0stld0r

--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -2467,7 +2467,7 @@
 .openerp .oe_list.oe_list_editable.oe_editing .oe_m2o_cm_button {
   display: none;
 }
-.openerp .oe_list.oe_list_editable.oe_editing .oe_form_field input {
+.openerp .oe_list.oe_list_editable.oe_editing .oe_form_field input, .openerp .oe_list.oe_list_editable.oe_editing .oe_form_field textarea {
   height: 27px;
 }
 .openerp .oe_list.oe_list_editable.oe_editing .oe_form_field input, .openerp .oe_list.oe_list_editable.oe_editing .oe_form_field textarea {
@@ -2476,9 +2476,6 @@
   border-radius: 0;
   border: 1px solid #aaaaff;
   margin: 0;
-}
-.openerp .oe_list.oe_list_editable.oe_editing .oe_form_field textarea {
-  height: 60px;
 }
 .openerp .oe_list.oe_list_editable.oe_editing .oe_form_field.oe_form_field_float input, .openerp .oe_list.oe_list_editable.oe_editing .oe_form_field.oe_form_view_integer input {
   text-align: right;
