--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -1937,14 +1937,12 @@ $sheet-max-width: 860px
         .oe_m2o_cm_button
             display: none
         .oe_form_field
-            input
+            input, textarea
                 height: $row-height
             input, textarea
                 @include radius(0)
                 border: 1px solid #aaf
                 margin: 0
-            textarea
-                height: 60px
             &.oe_form_field_float,&.oe_form_view_integer
                 input
                     text-align: right
